[CODE CHANGES] + Made a HUD manager + Made a HUD system + Refactored UI System's code in the constructor + Refactored UI and Render system's update loop + Fixed crash when pressing ESC in the about menu + Refactored shader code
[FILE CHANGES]
+ /include/managers/HUD_Manager.h
+ /src/managers/HUD_Manager.cpp
+ /include/systems/HUD_System.h
+ /src/systems/HUD_System.cpp

--- a/Project2/Project2.vcxproj.filters
+++ b/Project2/Project2.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Source Files\Core">
       <UniqueIdentifier>{c1e1e204-d16b-4cdb-8b97-6ad2a1e44de6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Managers">
+      <UniqueIdentifier>{461078cc-e88f-4f9a-8736-4b692a97119d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Managers">
+      <UniqueIdentifier>{cf3f7d90-ca42-4419-8c77-890f1f5b7f8e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\components\expires.h">
@@ -120,15 +126,6 @@
     <ClInclude Include="include\components\Label.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
-    <ClInclude Include="include\managers\entity_manager.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
-    <ClInclude Include="include\managers\map_loader.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
-    <ClInclude Include="include\managers\texture_manager.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
     <ClInclude Include="include\math\vector.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
@@ -150,17 +147,29 @@
     <ClInclude Include="include\events.h">
       <Filter>Header Files\Core</Filter>
     </ClInclude>
-    <ClInclude Include="include\managers\InputControls_Mgr.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
-    <ClInclude Include="include\managers\UI_Manager.h">
-      <Filter>Header Files\Systems</Filter>
-    </ClInclude>
-    <ClInclude Include="include\systems\CPU_Manager.h">
+    <ClInclude Include="include\systems\HUD_System.h">
       <Filter>Header Files\Systems</Filter>
     </ClInclude>
     <ClInclude Include="include\managers\CPU_Manager.h">
-      <Filter>Header Files\Systems</Filter>
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\HUD_Manager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\entity_manager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\InputControls_Mgr.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\texture_manager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\UI_Manager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="include\managers\map_loader.h">
+      <Filter>Header Files\Managers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -233,12 +242,6 @@
     <ClCompile Include="src\managers\texture_manager.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="src\managers\map_loader.cpp">
-      <Filter>Source Files\Systems</Filter>
-    </ClCompile>
-    <ClCompile Include="src\managers\entity_manager.cpp">
-      <Filter>Source Files\Systems</Filter>
-    </ClCompile>
     <ClCompile Include="src\components\bounding_box.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
@@ -248,17 +251,29 @@
     <ClCompile Include="src\components\solid.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
-    <ClCompile Include="src\managers\InputControls_Mgr.cpp">
-      <Filter>Source Files\Systems</Filter>
-    </ClCompile>
-    <ClCompile Include="src\managers\UI_Manager.cpp">
-      <Filter>Source Files\Systems</Filter>
-    </ClCompile>
     <ClCompile Include="src\systems\UI_System.cpp">
       <Filter>Source Files\Systems</Filter>
     </ClCompile>
-    <ClCompile Include="src\managers\CPU_Manager.cpp">
+    <ClCompile Include="src\systems\HUD_System.cpp">
       <Filter>Source Files\Systems</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\CPU_Manager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\entity_manager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\HUD_Manager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\InputControls_Mgr.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\UI_Manager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="src\managers\map_loader.cpp">
+      <Filter>Source Files\Managers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
