--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -85,14 +85,15 @@
     <ClInclude Include="include\Managers.h" />
     <ClInclude Include="include\managers\CPU_Manager.h" />
     <ClInclude Include="include\managers\entity_manager.h" />
+    <ClInclude Include="include\managers\HUD_Manager.h" />
     <ClInclude Include="include\managers\InputControls_Mgr.h" />
     <ClInclude Include="include\managers\map_loader.h" />
     <ClInclude Include="include\managers\texture_manager.h" />
     <ClInclude Include="include\managers\UI_Manager.h" />
     <ClInclude Include="include\math\vector.h" />
     <ClInclude Include="include\Systems.h" />
-    <ClInclude Include="include\systems\CPU_Manager.h" />
     <ClInclude Include="include\systems\damage_system.h" />
+    <ClInclude Include="include\systems\HUD_System.h" />
     <ClInclude Include="include\systems\UI_System.h" />
     <ClInclude Include="include\systems\view_system.h" />
     <ClInclude Include="include\application.h" />
@@ -136,12 +137,14 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\managers\CPU_Manager.cpp" />
     <ClCompile Include="src\managers\entity_manager.cpp" />
+    <ClCompile Include="src\managers\HUD_Manager.cpp" />
     <ClCompile Include="src\managers\InputControls_Mgr.cpp" />
     <ClCompile Include="src\managers\map_loader.cpp" />
     <ClCompile Include="src\managers\texture_manager.cpp" />
     <ClCompile Include="src\managers\UI_Manager.cpp" />
     <ClCompile Include="src\systems\damage_system.cpp" />
     <ClCompile Include="src\systems\expiring_system.cpp" />
+    <ClCompile Include="src\systems\HUD_System.cpp" />
     <ClCompile Include="src\systems\input_system.cpp" />
     <ClCompile Include="src\systems\physics_system.cpp" />
     <ClCompile Include="src\systems\render_system.cpp" />
