--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -94,6 +94,7 @@
     <ClInclude Include="include\Systems.h" />
     <ClInclude Include="include\systems\damage_system.h" />
     <ClInclude Include="include\systems\HUD_System.h" />
+    <ClInclude Include="include\systems\network_system.h" />
     <ClInclude Include="include\systems\score_system.h" />
     <ClInclude Include="include\systems\UI_System.h" />
     <ClInclude Include="include\systems\view_system.h" />
@@ -147,6 +148,7 @@
     <ClCompile Include="src\systems\expiring_system.cpp" />
     <ClCompile Include="src\systems\HUD_System.cpp" />
     <ClCompile Include="src\systems\input_system.cpp" />
+    <ClCompile Include="src\systems\network_system.cpp" />
     <ClCompile Include="src\systems\physics_system.cpp" />
     <ClCompile Include="src\systems\render_system.cpp" />
     <ClCompile Include="src\systems\score_system.cpp" />
