[CODE CHANGES] + Proper textfield height + Textfield textbox + Textfield cursor + added support for a period in a textfield + Fixed a bug where #9 was interpreted as a space in the textfield + Added option to set textfield character limit (default is 64)

--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -84,8 +84,8 @@
     <ClInclude Include="include\components\ViewController.h" />
     <ClInclude Include="include\events.h" />
     <ClInclude Include="include\Managers.h" />
-    <ClInclude Include="include\managers\CPU_Manager.h" />
     <ClInclude Include="include\managers\entity_manager.h" />
+    <ClInclude Include="include\managers\font_manager.h" />
     <ClInclude Include="include\managers\InputControls_Mgr.h" />
     <ClInclude Include="include\managers\map_loader.h" />
     <ClInclude Include="include\managers\texture_manager.h" />
@@ -138,8 +138,8 @@
     <ClCompile Include="src\components\VertexArray.cpp" />
     <ClCompile Include="src\components\ViewController.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\managers\CPU_Manager.cpp" />
     <ClCompile Include="src\managers\entity_manager.cpp" />
+    <ClCompile Include="src\managers\font_manager.cpp" />
     <ClCompile Include="src\managers\InputControls_Mgr.cpp" />
     <ClCompile Include="src\managers\map_loader.cpp" />
     <ClCompile Include="src\managers\texture_manager.cpp" />
