--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -87,13 +87,13 @@
     <ClInclude Include="include\components\VertexArray.h" />
     <ClInclude Include="include\components\ViewController.h" />
     <ClInclude Include="include\events.h" />
-    <ClInclude Include="include\Managers.h" />
     <ClInclude Include="include\managers\entity_manager.h" />
     <ClInclude Include="include\managers\font_manager.h" />
     <ClInclude Include="include\managers\game_manager.h" />
     <ClInclude Include="include\managers\InputControls_Mgr.h" />
     <ClInclude Include="include\managers\managers.h" />
     <ClInclude Include="include\managers\map_loader.h" />
+    <ClInclude Include="include\managers\net_manager.h" />
     <ClInclude Include="include\managers\score_manager.h" />
     <ClInclude Include="include\managers\texture_manager.h" />
     <ClInclude Include="include\managers\UI_Manager.h" />
@@ -154,6 +154,7 @@
     <ClCompile Include="src\managers\game_manager.cpp" />
     <ClCompile Include="src\managers\InputControls_Mgr.cpp" />
     <ClCompile Include="src\managers\map_loader.cpp" />
+    <ClCompile Include="src\managers\net_manager.cpp" />
     <ClCompile Include="src\managers\score_manager.cpp" />
     <ClCompile Include="src\managers\texture_manager.cpp" />
     <ClCompile Include="src\managers\UI_Manager.cpp" />
